# multi-agent-moderation

./: .env.example  .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt
docs/: 00-项目概览.md  01-技术选型.md  02-QualityAgent接入LangChain与LangGraph.md  API.md  ARCHITECTURE.md  INDEX.md
modules/compliance_agent/: .gitignore  README.md  __init__.py  core.py
modules/compliance_agent/data/: knowledge_base.json  sample_inputs.json
modules/compliance_agent/docs/: API.md  README.md
modules/compliance_agent/rules/: rules.json
modules/compliance_agent/scripts/: run_blacklist_demo.py
modules/quality_agent/: .gitignore  requirements.txt
modules/quality_agent/data/: README.md  batch_notes.json  history_notes.json  risky_database_tests.txt  risky_notes.json  热点关键词.csv
modules/quality_agent/docs/: API.md  README.md  UI.md
modules/quality_agent/scripts/: clean_history_notes.py  convert_banned_words.py  feature_scoring.py
modules/quality_agent/test/: test_dedup.py  test_potential.py
modules/quality_agent/utils/: embedding_utils.py
modules/review_agent/: README.md  __init__.py  core.py
modules/review_agent/chains/: __init__.py  review_chain.py
modules/review_agent/data/: replacement_rules.json  sample_inputs.json
modules/review_agent/docs/: API.md  README.md
modules/review_agent/examples/: run_review_example.py
modules/review_agent/prompts/: review_prompt.txt  system.txt
src/multi_agent_moderation/: __init__.py  io.py  pipeline.py  quality_runtime.py
tests/: test_audit_store.py  test_config_loader.py  test_orchestrator.py
(+27 files in other folders)
